--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "chance": "^1.1.7",
     "express": "^4.17.1"
   },
   "devDependencies": {},
